fixing row and col spacing bug

--- a/src/components/row/Row.style.scss
+++ b/src/components/row/Row.style.scss
@@ -1,6 +1,8 @@
 .row {
   display: flex;
   flex-wrap: wrap;
+  margin-left: -.5rem;
+  margin-right: -.5rem;
 
   + .row {
     margin-top: 1rem;
@@ -9,6 +11,6 @@
   > * {
     flex-shrink: 0;
     max-width: 100%;
-    width: 100%;
+    padding: 0 .5rem;
   }
 }
